# pydgey

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  showcase.ipynb
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/about/: contributing.md  identity.md  installation.md  license.md
docs/api/: core.md  execution.md  layout.md  runtime.md  widget.md
docs/usage/: components.md  dependencies.md  execution.md  frontend.md  layouts.md  pipelines.md  progress.md  results.md  the-whole-game.md
examples/showcase/: showcase_pipeline.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  types.ts  widget.tsx
frontend/src/components/: Parameters.tsx  PipelineWidget.tsx
frontend/src/components/layout/: components.tsx  field_wrapper.tsx  recursive.tsx  registry.tsx
frontend/src/components/ui/: badge.tsx  tabs.tsx  textarea.tsx  variants.ts
src/pydgey/: README.md  __init__.py
src/pydgey/core/: __init__.py  config.py  decorators.py  errors.py  params.py  pipeline.py
src/pydgey/execution/: __init__.py  logging.py  progress.py  results.py
src/pydgey/layout/: __init__.py  components.py  elements.py  fields.py  validators.py
src/pydgey/runtime/: __init__.py  colab.py  commands.py  environment.py
src/pydgey/widget/: __init__.py  base.py  transport.py
